updating solution with challenge code

--- a/solution/index.html
+++ b/solution/index.html
@@ -8,17 +8,26 @@
         <script src="script.js"></script>
     </head>
     <body>
+      <H1>My Awesome Carousel</H1>
 
       <section id='carousel'>
-      
+        <img id="mainPhoto" src='' />
         <div id='controls'>
           <button type="button" class="btn btn-dark" id="back">Back</button>
+          <p id='caption'></p>
           <button type="button" class="btn btn-dark" id="next">Next</button>
         </div>
+      </section>
 
-        <img src='' />
-
-        <h1 id='caption'></h1>
+      <section id="addPhotos">
+        <h2>Add a Photo</h2>
+        <div>
+          <img class="newPhotos" alt="bruno" src="https://scontent-lga3-1.cdninstagram.com/t51.2885-15/e35/21372558_1412565952114648_8261401763161047040_n.jpg">
+          <img class="newPhotos" alt="dragon" src="https://scontent-lga3-1.cdninstagram.com/t51.2885-15/e35/21371645_1487802804643855_4053301546522247168_n.jpg">
+          <img class="newPhotos" alt="shelock holmes" src="https://scontent-lga3-1.cdninstagram.com/t51.2885-15/e35/21435896_863089577193053_4531695237541658624_n.jpg">
+          <img class="newPhotos" alt="lexi" src="https://scontent-lga3-1.cdninstagram.com/t51.2885-15/e35/21435454_253371205184066_430137951037423616_n.jpg">
+          <img class="newPhotos" alt="jax" src="https://scontent-lga3-1.cdninstagram.com/t51.2885-15/e35/21296530_1716511218655283_6903771083455856640_n.jpg">
+        </div>
       </section>
 
     </body>
